# routes/routes.go
@@ -6,10 +6,17 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-func AuthRoutes(router *gin.Engine) {
+func RoutesGo(router *gin.Engine) {
 	auth := router.Group("/auth")
 	{
 		auth.POST("/register", handlers.Register)
 		auth.POST("/login", handlers.Login)
+	}
+
+	users := router.Group("/users")
+	{
+		users.GET("/", handlers.GetAllUsers)
+		users.PUT("/:id", handlers.UpdateUser)
+		users.DELETE("/:id", handlers.DeleteUser)
 	}
 }
